--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,12 @@
     </string>
     <string name="title_activity_main">MainActivity</string>
 
+    <string name="text_body_font_family">sans-serif-light</string>
+
+    <string name="text_headline_font_family">sans-serif-medium</string>
+
+
+
     <string name="candidate_name">Dilmala</string>
     <string name="candidate_short_description">blablabla balbal bal balbabalbal abllab albalablba blablabla balbal bal balbabalbal abllab albalablba
      blablabla balbal bal balbabalbal abllab albalablba blablabla balbal bal balbabalbal abllab albalablba</string>
